css/main.css
/* background color red */
.bg-color {
  background-color: #f72210;
}
svg {
  width: 396px;
  height: 60px;
  color: white;
}
.weather-icon {
  width: 24px;
  height: 24px;
}
/* font for nav */
.nav-font {
  font-family: "Roboto Condensed", sans-serif;
}

.btn-radius {
  border-radius: 100px;
}
ul {
  list-style: none;
}
ul li a {
  color: black;
}
li a:hover {
  color: #f72210 !important;
  text-decoration: none !important;
}
.search {
  width: 80px;
}

/* link red underline */
.underline-red {
  text-decoration-color: red !important;
}

.contain {
  object-fit: cover;
}

/* article description */
.article-des {
  font-size: 15px;
  line-height: 19px !important;
  font-family: Arial, Helvetica, sans-serif !important;
}

/* topic tag */
.genre {
  color: #f72210;
  bottom: 0;
  font-size: 15px;
  background-color: rgba(255, 255, 255, 0.9);
}

/* grey article titles */
.grey-text {
  font-size: 14px;
  line-height: 16px;
  font-weight: bold;
}

@media (min-width: 1200px) {
  /* wider body */
  .main-con {
    min-width: 1310px !important;
  }
}

/* independent scroll for more stories section */
.scroll-height {
  height: 100vh;
  overflow: auto;
}
.scroll-height::-webkit-scrollbar {
  display: none;
}

.img-fit {
  object-fit: contain;
}

/* dimensions of col 3 images */
.col3-img {
  width: 63px;
  height: 63px;
}
/* debate section decoration */
.versus::before,
.versus::after {
  content: "";
  display: block;
  background-color: #d9d9d9;
  height: 1px;
  position: absolute;
  left: 0;
  right: 0;
}
.versus::before {
  top: calc(50% - 2px);
}
.versus::after {
  top: 50%;
}
.vs-text {
  z-index: 1;
}

/* sticky poisition for col 3 */

.sticky {
  position: sticky;
  top: -370px;
}

/* font important */
.font-important {
  font: 19px/19px "Roboto Condensed", sans-serif;
}
/* logo svg */
.n-svg {
  width: 40px;
  height: 28px;
  background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
    no-repeat #f72210;
}

/* email border */
.email-border {
  border: 0.5px solid lightgray !important;
}
/* sign-up font */
.sign-up {
  font-size: 17px;
  font-family: "Roboto Condensed", sans-serif;
  background-color: #f61602;
}

